tests/cases/control-flow/ok/if-return-one-branch.ari
fn main() -> i64 {
  let condition = true;
  let token: own i64 = 5;
  if condition {
    drop token;
    return 4;
  }
  drop token;
  return 0;
}
