tests/cases/control-flow/errors/if-branch-state-mismatch.ari
fn main() -> i64 {
  let condition = true;
  let token: own i64 = 5;
  if condition {
    drop token;
  } else {
    let value = 0;
  }
  return 0;
}
